--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -3,7 +3,13 @@
 
 .video {
   position: relative;
+  max-height: 70rem;
+  min-height: 50rem;
+  overflow: hidden;
   .overlay {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -13,6 +19,26 @@
 
   video {
     display: block;
-    width: 100%;
+    width: auto;
+    @include m.desktopView {
+      width: 100%;
+    }
+  }
+}
+
+.video-content {
+  z-index: 10;
+  h2 {
+    color: v.$just-white;
+    font-size: 7rem;
+    margin: 0;
+  }
+  p {
+    background-color: v.$light-pink;
+    display: inline-block;
+    padding: 1rem 2rem;
+    color: v.$just-white;
+    font-weight: 700;
+    font-size: 2.4rem;
   }
 }
