--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  font-family: v.$main-font-stack;
+  font-family: v.$montserrat-font-stack;
   font-size: 1.6rem;
 }
 
@@ -33,12 +33,8 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3 {
-   margin: 0 0 5rem 0;
-}
-
 h1 {
-  font-size: 4rem;
+  margin: 0;
 }
 
 h2 {
@@ -47,4 +43,9 @@ h2 {
 
 h3 {
   font-size: 3rem;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
